--- a/input.css
+++ b/input.css
@@ -77,6 +77,7 @@
 }
 
 html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+    height: auto !important;
 }
